name:                MobileFun
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Devin Lehmacher
category:            Miscellaneous
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Commonmark.Pandoc.C
  build-depends:       base >= 4.7 && < 5
                     , commonmark
                     , commonmark-extensions
                     , commonmark-pandoc
                     , aeson
                     , bytestring
                     , pandoc-types == 1.22.1
                     , text
                     , yaml
                     , attoparsec
  default-language:    Haskell2010
